<resources>
    <string name="app_name">Calculator</string>
    <string name="_0">0</string>
    <string name="_22_44">22 + 44</string>
    <string name="enter_number">Enter number</string>
    <string name="x">X</string>
    <string name="os">-</string>
    <string name="ac">AC</string>
    <string name="_7">7</string>
    <string name="_4">4</string>
    <string name="_1">1</string>
    <string name="_9">9</string>
    <string name="sic_ca">Sic.ca</string>
    <string name="k"><![CDATA[<-]]></string>
    <string name="_8">8</string>
    <string name="_5">5</string>
    <string name="_2">2</string>
    <string name="j">%</string>
    <string name="_6">6</string>
    <string name="_3">3</string>
</resources>