<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="16dp"
        android:text="@string/_0"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_written"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:ems="10"
        android:hint="@string/enter_number"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="280dp"
        android:paddingEnd="0dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.292" />

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="2dp"
        android:padding="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_written"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:layout_height="90dp"
            android:background="@drawable/item_box"
            android:backgroundTint="#C39A67"
            android:text="@string/ac"
            android:textColor="#263238"
            android:textSize="26sp"
            app:layout_column="0"
            app:layout_row="0"
            tools:ignore="TextContrastCheck" />

        <Button
            android:layout_height="90dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/item_box"
            android:backgroundTint="#E88100"
            android:text="@string/_7"
            android:textSize="24sp"
            app:layout_column="0"
            app:layout_row="1" />

        <Button
            android:layout_height="90dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/item_box"
            android:backgroundTint="#E88100"
            android:text="@string/_4"
            android:textSize="24sp"
            app:layout_column="0"
            app:layout_row="2" />

        <Button
            android:layout_height="90dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/item_box"
            android:backgroundTint="#E88100"
            android:text="@string/_1"
            android:textSize="24sp"
            app:layout_column="0"
            app:layout_row="3" />

        <Button
            android:layout_height="90dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/item_box"
            android:backgroundTint="#E88100"
            android:text="@string/sic_ca"
            android:textColor="#263238"
            android:textSize="24sp"
            app:layout_column="0"
            app:layout_row="4"
            tools:ignore="TextContrastCheck" />

        <!--secondcolumn-->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/item_box"
            android:backgroundTint="#5299A6"
            android:text="@string/k"
            android:textSize="26sp"

            app:layout_column="1"
            app:layout_row="0" />

        <Button
            android:layout_height="90dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/item_box"
            android:backgroundTint="#E88100"
            android:text="@string/_8"
            android:textSize="24sp"
            app:layout_column="1"
            app:layout_row="1" />

        <Button
            android:layout_height="90dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/item_box"
            android:backgroundTint="#E88100"
            android:text="@string/_5"
            android:textSize="24sp"
            app:layout_column="1"
            app:layout_row="2" />

        <Button
            android:layout_height="90dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/item_box"
            android:backgroundTint="#E88100"
            android:text="@string/_2"
            android:textSize="24sp"
            app:layout_column="1"
            app:layout_row="3" />

        <Button
            android:layout_height="90dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/item_box"
            android:backgroundTint="#E88100"
            android:text="@string/_0"
            android:textSize="24sp"
            app:layout_column="1"
            app:layout_row="4" />

        <!--        Thid column-->

        <Button
            android:layout_height="90dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/item_box"
            android:backgroundTint="#C39A67"
            android:text="@string/j"
            android:textColor="#263238"
            android:textSize="24sp"
            app:layout_column="2"
            app:layout_row="0"
            tools:ignore="TextContrastCheck" />

        <Button
            android:layout_height="90dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/item_box"
            android:backgroundTint="#E88100"
            android:text="@string/_9"
            android:textSize="24sp"
            app:layout_column="2"
            app:layout_row="1" />

        <Button
            android:layout_height="90dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/item_box"
            android:backgroundTint="#E88100"
            android:text="@string/_6"
            android:textSize="24sp"
            app:layout_column="2"
            app:layout_row="2" />

        <Button
            android:layout_height="90dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/item_box"
            android:backgroundTint="#E88100"
            android:text="@string/_3"
            android:textSize="24sp"
            app:layout_column="2"
            app:layout_row="3" />

        <Button
            android:layout_height="90dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/item_box"
            android:backgroundTint="#E88100"
            android:text="."
            android:textSize="24sp"
            app:layout_column="2"
            app:layout_row="4" />


        <!--        fourth column-->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/item_box"
            android:backgroundTint="#C39A67"
            android:text="/"
            android:textSize="24sp"
            app:layout_column="3"
            app:layout_row="0" />

        <Button
            android:layout_height="90dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/item_box"
            android:backgroundTint="#C39A67"
            android:text="@string/x"
            android:textSize="24sp"
            app:layout_column="3"
            app:layout_row="1" />

        <Button
            android:layout_height="90dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/item_box"
            android:backgroundTint="#C39A67"
            android:text="@string/os"
            android:textColor="#263238"
            android:textSize="24sp"
            app:layout_column="3"
            app:layout_row="2"
            tools:ignore="TextContrastCheck" />

        <Button
            android:layout_height="90dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/item_box"
            android:backgroundTint="#C39A67"
            android:text="+"
            android:textColor="#263238"
            android:textSize="24sp"
            app:layout_column="3"
            app:layout_row="3"
            tools:ignore="TextContrastCheck" />

        <Button
            android:layout_height="90dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/item_box"
            android:backgroundTint="#C39A67"
            android:text="="
            android:textColor="#263238"
            android:textSize="24sp"
            app:layout_column="3"
            app:layout_row="4"
            tools:ignore="TextContrastCheck" />


    </androidx.gridlayout.widget.GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>